--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,7 @@ pyopenssl==19.0.0
 python-dateutil==2.8.0
 pyyaml==5.1
 requests[socks]==2.22.0
-shadowsocks==2.8.2
 fire==0.2.1
 loguru==0.3.2
 pyftpdlib==1.5.5
-webssh==1.4.5
+webssh
